# eww-mac-shell

./: .gitignore  README.md  control_center.yuck  dock.yuck  eww.scss  eww.yuck
scripts/hyprland-minimize/: Cargo.toml
scripts/hyprland-minimize/src/: main.rs
scripts/hyprland-tasks/: Cargo.toml
scripts/hyprland-tasks/src/: main.rs
